--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,7 @@ AUTOMAKE_OPTIONS = no-dependencies
 
 bin_PROGRAMS = onenetd
 onenetd_SOURCES = onenetd.c
+man_MANS = onenetd.1
+
+EXTRA_DIST = $(man_MANS)
 
