Automate the test suite.
This replaces the manual test suites, and is a bit more thorough. (But
I didn't find any bugs in the process of adding it.)

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,5 +4,9 @@ bin_PROGRAMS = onenetd
 onenetd_SOURCES = onenetd.c
 man_MANS = onenetd.1
 
-EXTRA_DIST = $(man_MANS)
+if WITH_TESTS
+check-local:
+	$(srcdir)/test-onenetd ./onenetd
+endif
 
+EXTRA_DIST = $(man_MANS) test-onenetd
